--- a/project/src/components/NavBar/NavBar.css
+++ b/project/src/components/NavBar/NavBar.css
@@ -14,8 +14,10 @@
 
 .brand-name {
     text-decoration: none;
+    font-variant: small-caps;
+    font-weight: bolder;
     color: black;
-    font-size: 2.3rem;
+    font-size: 2.1rem;
     margin-left: 1rem;
   }
 
