--- a/project/src/components/AboutMeIntro/AboutMeIntro.css
+++ b/project/src/components/AboutMeIntro/AboutMeIntro.css
@@ -41,7 +41,7 @@
       left: 0px;
       flex-direction: column;
       width:100%;
-      /* height: calc(100vh - 77px);  */
+      height: 1500px;
       background-color: rgba(53, 97, 102, 0.6);
       border-top: 1px solid black;
     }
